--- a/shop.html
+++ b/shop.html
@@ -166,9 +166,9 @@
       <div class="product-card">
         <img src="images/model1.jpg" alt="Cherry Red Handbag" />
         <div class="product-info">
-          <div class="product-title">Timeless Shoulder Bag</div>
+          <div class="product-title">'Posh Lady' Designer Handbag</div>
           <div class="product-color">Cherry Red</div>
-          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DD2MCDFF/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DCTZX1PW/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
         </div>
       </div>
 
@@ -176,9 +176,9 @@
       <div class="product-card">
         <img src="images/model2.jpg" alt="Night Black Handbag" />
         <div class="product-info">
-          <div class="product-title">Timeless Shoulder Bag</div>
+          <div class="product-title">'Posh Lady' Designer Handbag</div>
           <div class="product-color">Night Black</div>
-          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DCTZX1PW/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DD2MCDFF/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
         </div>
       </div>
 
@@ -186,7 +186,7 @@
       <div class="product-card">
         <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
         <div class="product-info">
-          <div class="product-title">Timeless Shoulder Bag</div>
+          <div class="product-title">'Posh Lady' Designer Handbag</div>
           <div class="product-color">Walnut Beige</div>
           <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DD2M8HH7/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
         </div>
@@ -196,7 +196,7 @@
       <div class="product-card">
         <img src="images/model4.jpg" alt="Espresso Brown Handbag" />
         <div class="product-info">
-          <div class="product-title">Timeless Shoulder Bag</div>
+          <div class="product-title">'Posh Lady' Designer Handbag</div>
           <div class="product-color">Espresso Brown</div>
           <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0F7H5487J/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
         </div>
@@ -206,7 +206,7 @@
       <div class="product-card">
         <img src="images/model5.jpg" alt="Graceful Queen Yellow Handbag" />
         <div class="product-info">
-          <div class="product-title">'Graceful Queen' Handbag</div>
+          <div class="product-title">'Graceful Queen' Timeless Handbag</div>
           <div class="product-color">Yellow</div>
           <a href="https://www.amazon.com/ittromaa-Graceful-Shoulder-Versatile-Crossbody/dp/B0DPZKV1YV/ref=sr_1_2?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1754280242&refinements=p_4%3Aittromaa&s=apparel&sr=1-2&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
         </div>
@@ -216,7 +216,7 @@
       <div class="product-card">
         <img src="images/model6.jpg" alt="Graceful Queen Black Handbag" />
         <div class="product-info">
-          <div class="product-title">'Graceful Queen' Handbag</div>
+          <div class="product-title">'Graceful Queen' Timeless Handbag</div>
           <div class="product-color">Black</div>
           <a href="https://www.amazon.com/ittromaa-Graceful-Shoulder-Versatile-Crossbody/dp/B0DPZFS1Z7/ref=sr_1_2?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1754280242&refinements=p_4%3Aittromaa&s=apparel&sr=1-2&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
         </div>
