--- a/shop.html
+++ b/shop.html
@@ -5,16 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Shop | ittromaa</title>
   <link rel="stylesheet" href="style.css" />
-  
+
   <!-- Counter.dev Tracking Script -->
   <script src="https://cdn.counter.dev/script.js" 
           data-id="9af2f9c9-73a4-48f2-ba5f-551194d0207c" 
           data-utcoffset="-4"></script>
 
   <style>
-    /* Navigation bar */
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+    }
+
     nav {
-      background-color: #b8860b; /* golden */
+      background-color: #b8860b;
       padding: 1rem 0;
       box-shadow: 0 3px 8px rgba(0,0,0,0.15);
     }
@@ -37,24 +42,19 @@
       transition: color 0.3s ease;
     }
 
-    nav a:hover {
-      color: #000;
-    }
-
+    nav a:hover,
     nav a.active {
       color: #000;
-      text-decoration: underline;
     }
 
-    /* Page content container */
     .content {
-      max-width: 1100px;
+      max-width: 1400px;
       margin: 2rem auto 4rem;
       padding: 0 1rem;
-      text-align: center;
     }
 
-    .content h1 {
+    h1 {
+      text-align: center;
       font-size: 3rem;
       color: #b8860b;
       margin-bottom: 2rem;
@@ -62,15 +62,34 @@
       letter-spacing: 1.5px;
     }
 
-    /* Product grid */
+    .shop-container {
+      display: grid;
+      grid-template-columns: 1fr 8px 1fr;
+      gap: 2rem;
+    }
+
+    .shop-column {
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+
+    .shop-column h2 {
+      text-align: center;
+      color: #444;
+    }
+
+    .divider {
+      background-color: #ccc;
+      width: 2px;
+    }
+
     .product-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 2.5rem;
-      padding-bottom: 2rem;
     }
 
-    /* Each product card */
     .product-card {
       background: #fff;
       border-radius: 12px;
@@ -95,16 +114,6 @@
       object-fit: cover;
       border-radius: 8px;
       margin-bottom: 1rem;
-      user-select: none;
-      pointer-events: none;
-    }
-
-    .product-info {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 100%;
     }
 
     .product-title {
@@ -112,7 +121,7 @@
       font-weight: 700;
       color: #222;
       margin-bottom: 0.4rem;
-      text-transform: capitalize;
+      text-align: center;
     }
 
     .product-color {
@@ -135,10 +144,25 @@
 
     .product-link:hover {
       background-color: #996f00;
-      color: #fff;
     }
 
-    /* Responsive for smaller devices */
+    footer {
+      text-align: center;
+      padding: 2rem 0;
+      background: #eee;
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    @media (max-width: 900px) {
+      .shop-container {
+        grid-template-columns: 1fr;
+      }
+      .divider {
+        display: none;
+      }
+    }
+
     @media (max-width: 600px) {
       .product-card img {
         height: 180px;
@@ -159,69 +183,72 @@
   </nav>
 
   <section class="content">
-    <h1>Shop ittromaa</h1>
-    <div class="product-grid">
-
-      <!-- Product 1: Cherry Red -->
-      <div class="product-card">
-        <img src="images/model2.jpg" alt="Cherry Red Handbag" />
-        <div class="product-info">
-          <div class="product-title">'Posh Lady' Designer Handbag</div>
-          <div class="product-color">Cherry Red</div>
-          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DCTZX1PW/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+    <h1>shop ittromaa</h1>
+    <div class="shop-container">
+      <!-- USA -->
+      <div class="shop-column">
+        <h2>Shop USA</h2>
+        <div class="product-grid">
+          <div class="product-card">
+            <img src="images/model2.jpg" alt="Cherry Red Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Cherry Red</div>
+            <a href="https://www.amazon.com/dp/B0DCTZX1PW" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model1.jpg" alt="Night Black Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Night Black</div>
+            <a href="https://www.amazon.com/dp/B0DD2MCDFF" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Walnut Beige</div>
+            <a href="https://www.amazon.com/dp/B0DD2M8HH7" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model6.jpg" alt="Espresso Brown Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Espresso Brown</div>
+            <a href="https://www.amazon.com/dp/B0F7H5487J" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+          </div>
         </div>
       </div>
 
-      <!-- Product 2: Night Black -->
-      <div class="product-card">
-        <img src="images/model1.jpg" alt="Night Black Handbag" />
-        <div class="product-info">
-          <div class="product-title">'Posh Lady' Designer Handbag</div>
-          <div class="product-color">Night Black</div>
-          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DD2MCDFF/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+      <!-- Divider -->
+      <div class="divider"></div>
+
+      <!-- Canada -->
+      <div class="shop-column">
+        <h2>Shop Canada</h2>
+        <div class="product-grid">
+          <div class="product-card">
+            <img src="images/model2.jpg" alt="Cherry Red Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Cherry Red</div>
+            <a href="https://www.amazon.ca/dp/B0DD2MCDFF" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model1.jpg" alt="Night Black Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Night Black</div>
+            <a href="https://www.amazon.ca/dp/B0DCTZX1PW" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Walnut Beige</div>
+            <a href="https://www.amazon.ca/dp/B0DD2M8HH7" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model6.jpg" alt="Espresso Brown Handbag" />
+            <div class="product-title">'Posh Lady' Handbag</div>
+            <div class="product-color">Espresso Brown</div>
+            <a href="https://www.amazon.ca/dp/B0F7H5487J" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+          </div>
         </div>
       </div>
-
-      <!-- Product 3: Walnut Beige -->
-      <div class="product-card">
-        <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
-        <div class="product-info">
-          <div class="product-title">'Posh Lady' Designer Handbag</div>
-          <div class="product-color">Walnut Beige</div>
-          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0DD2M8HH7/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
-        </div>
-      </div>
-
-      <!-- Product 4: Espresso Brown -->
-      <div class="product-card">
-        <img src="images/model6.jpg" alt="Espresso Brown Handbag" />
-        <div class="product-info">
-          <div class="product-title">'Posh Lady' Designer Handbag</div>
-          <div class="product-color">Espresso Brown</div>
-          <a href="https://www.amazon.com/Timeless-Shoulder-Versatile-Crossbody-ittromaa/dp/B0F7H5487J/ref=sr_1_1?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1753845298&refinements=p_4%3Aittromaa&s=apparel&sr=1-1&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
-        </div>
-      </div>
-
-      <!-- Product 5: Graceful Queen Yellow -->
-      <div class="product-card">
-        <img src="images/model5.jpg" alt="Graceful Queen Yellow Handbag" />
-        <div class="product-info">
-          <div class="product-title">'Graceful Queen' Timeless Handbag</div>
-          <div class="product-color">Yellow</div>
-          <a href="https://www.amazon.com/ittromaa-Graceful-Shoulder-Versatile-Crossbody/dp/B0DPZKV1YV/ref=sr_1_2?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1754280242&refinements=p_4%3Aittromaa&s=apparel&sr=1-2&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
-        </div>
-      </div>
-
-      <!-- Product 6: Graceful Queen Black -->
-      <div class="product-card">
-        <img src="images/model4.jpg" alt="Graceful Queen Black Handbag" />
-        <div class="product-info">
-          <div class="product-title">'Graceful Queen' Timeless Handbag</div>
-          <div class="product-color">Black</div>
-          <a href="https://www.amazon.com/ittromaa-Graceful-Shoulder-Versatile-Crossbody/dp/B0DPZFS1Z7/ref=sr_1_2?dib=eyJ2IjoiMSJ9.vEL42r8zpJBaS7FC5_wlqD8zhY-Gn77qPHjhX5pFOAg.7qwiDaMvzfLJi_zaPBLG0P7OWZCduRDimrXXb72bGq4&dib_tag=se&qid=1754280242&refinements=p_4%3Aittromaa&s=apparel&sr=1-2&th=1" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
-        </div>
-      </div>
-
     </div>
   </section>
 
