--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
       <div class="contact-info-box">
         <h2>Retail & Wholesale Enquiries</h2>
         <p>
-          Are you a retailer or wholesaler interested in carrying <strong>Ittromaa</strong> vegan handbags?
+          Are you a retailer or wholesaler interested in carrying ittromaa vegan handbags?
           We'd love to collaborate with boutiques, fashion outlets, and online stores across North America.
         </p>
         <p>
