--- a/shop.html
+++ b/shop.html
@@ -55,11 +55,11 @@
 
     h1 {
       text-align: center;
-      font-size: 3rem;
-      color: #b8860b;
-      margin-bottom: 2rem;
-      text-transform: lowercase;
-      letter-spacing: 1.5px;
+      font-size: 2.5rem;
+      color: #222;
+      margin-bottom: 2.5rem;
+      font-weight: bold;
+      text-transform: none;
     }
 
     .shop-container {
@@ -183,7 +183,7 @@
   </nav>
 
   <section class="content">
-    <h1>shop ittromaa</h1>
+    <h1>Buy Your Designer Vegan Handbag Today — Stylish, Timeless & Cruelty-Free</h1>
     <div class="shop-container">
       <!-- USA -->
       <div class="shop-column">
@@ -193,25 +193,37 @@
             <img src="images/model2.jpg" alt="Cherry Red Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Cherry Red</div>
-            <a href="https://www.amazon.com/dp/B0DCTZX1PW" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+            <a href="https://www.amazon.com/dp/B0DCTZX1PW" target="_blank" class="product-link">Shop on Amazon USA</a>
           </div>
           <div class="product-card">
             <img src="images/model1.jpg" alt="Night Black Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Night Black</div>
-            <a href="https://www.amazon.com/dp/B0DD2MCDFF" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+            <a href="https://www.amazon.com/dp/B0DD2MCDFF" target="_blank" class="product-link">Shop on Amazon USA</a>
           </div>
           <div class="product-card">
             <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Walnut Beige</div>
-            <a href="https://www.amazon.com/dp/B0DD2M8HH7" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+            <a href="https://www.amazon.com/dp/B0DD2M8HH7" target="_blank" class="product-link">Shop on Amazon USA</a>
           </div>
           <div class="product-card">
             <img src="images/model6.jpg" alt="Espresso Brown Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Espresso Brown</div>
-            <a href="https://www.amazon.com/dp/B0F7H5487J" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon USA</a>
+            <a href="https://www.amazon.com/dp/B0F7H5487J" target="_blank" class="product-link">Shop on Amazon USA</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model5.jpg" alt="Yellow Handbag" />
+            <div class="product-title">'Graceful Queen' Handbag</div>
+            <div class="product-color">Yellow</div>
+            <a href="https://www.amazon.com/dp/B0DPZKV1YV" target="_blank" class="product-link">Shop on Amazon USA</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model4.jpg" alt="Black Handbag" />
+            <div class="product-title">'Graceful Queen' Handbag</div>
+            <div class="product-color">Black</div>
+            <a href="https://www.amazon.com/dp/B0DPZFS1Z7" target="_blank" class="product-link">Shop on Amazon USA</a>
           </div>
         </div>
       </div>
@@ -227,25 +239,37 @@
             <img src="images/model2.jpg" alt="Cherry Red Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Cherry Red</div>
-            <a href="https://www.amazon.ca/dp/B0DD2MCDFF" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+            <a href="https://www.amazon.ca/dp/B0DD2MCDFF" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
             <img src="images/model1.jpg" alt="Night Black Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Night Black</div>
-            <a href="https://www.amazon.ca/dp/B0DCTZX1PW" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+            <a href="https://www.amazon.ca/dp/B0DCTZX1PW" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
             <img src="images/model3.jpg" alt="Walnut Beige Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Walnut Beige</div>
-            <a href="https://www.amazon.ca/dp/B0DD2M8HH7" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+            <a href="https://www.amazon.ca/dp/B0DD2M8HH7" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
           <div class="product-card">
             <img src="images/model6.jpg" alt="Espresso Brown Handbag" />
             <div class="product-title">'Posh Lady' Handbag</div>
             <div class="product-color">Espresso Brown</div>
-            <a href="https://www.amazon.ca/dp/B0F7H5487J" target="_blank" class="product-link" rel="noopener noreferrer">Shop on Amazon Canada</a>
+            <a href="https://www.amazon.ca/dp/B0F7H5487J" target="_blank" class="product-link">Shop on Amazon Canada</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model5.jpg" alt="Yellow Handbag" />
+            <div class="product-title">'Graceful Queen' Handbag</div>
+            <div class="product-color">Yellow</div>
+            <a href="https://www.amazon.ca/dp/B0DPZKV1YV" target="_blank" class="product-link">Shop on Amazon Canada</a>
+          </div>
+          <div class="product-card">
+            <img src="images/model4.jpg" alt="Black Handbag" />
+            <div class="product-title">'Graceful Queen' Handbag</div>
+            <div class="product-color">Black</div>
+            <a href="https://www.amazon.ca/dp/B0DPZFS1Z7" target="_blank" class="product-link">Shop on Amazon Canada</a>
           </div>
         </div>
       </div>
