--- a/lookbook.html
+++ b/lookbook.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ittromaa Lookbook</title>
+  <title>The ittromaa Collection</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -63,7 +63,7 @@
 
   <!-- Section 1: Videos -->
   <section id="videos">
-    <h2>Lookbook Videos</h2>
+    <h2>Style in Motion</h2>
     <div class="grid">
       <div class="box">
         <video controls>
@@ -94,7 +94,7 @@
 
   <!-- Section 2: Models with Bags -->
   <section id="models">
-    <h2>Models with Ittromaa Bags</h2>
+    <h2>Spotted in Style: Models Carrying ittromaa</h2>
     <div class="grid">
       <div class="box"><img src="images/model1.jpg" alt="Model 1"></div>
       <div class="box"><img src="images/model2.jpg" alt="Model 2"></div>
@@ -105,7 +105,7 @@
 
   <!-- Section 3: Bag Description Photos -->
   <section id="descriptions">
-    <h2>Bag Features & Descriptions</h2>
+    <h2>Signature Features & Bag Details</h2>
     <div class="grid">
       <div class="box"><img src="images/bag_description1.jpg" alt="Bag 1"></div>
       <div class="box"><img src="images/bag_description2.jpg" alt="Bag 2"></div>
