--- a/lookbook.html
+++ b/lookbook.html
@@ -67,13 +67,13 @@
     <div class="grid">
       <div class="box">
         <video controls>
-          <source src="videos/video1.mp4" type="video/mp4">
+          <source src="videos/Black-unpacking.MOV" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
       <div class="box">
         <video controls>
-          <source src="videos/video2.mp4" type="video/mp4">
+          <source src="videos/Whats in my bag.mov" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
