--- a/lookbook.html
+++ b/lookbook.html
@@ -45,17 +45,57 @@
       justify-content: center;
     }
 
+    #models .box {
+      width: 30%; /* 3 columns layout */
+    }
+
     .box img, .box video {
       max-width: 100%;
       max-height: 100%;
       object-fit: cover;
       display: block;
+      cursor: pointer;
     }
 
     @media (max-width: 768px) {
       .box {
         width: 100%;
       }
+    }
+
+    /* Lightbox styling */
+    .lightbox {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      padding-top: 60px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.8);
+    }
+
+    .lightbox-content {
+      margin: auto;
+      display: block;
+      max-width: 90%;
+      max-height: 80%;
+    }
+
+    .lightbox:target {
+      display: block;
+    }
+
+    .close {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+      color: white;
+      font-size: 30px;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
@@ -96,10 +136,12 @@
   <section id="models">
     <h2>Spotted in Style: Models Carrying ittromaa</h2>
     <div class="grid">
-      <div class="box"><img src="images/model1.jpg" alt="Model 1"></div>
-      <div class="box"><img src="images/model2.jpg" alt="Model 2"></div>
-      <div class="box"><img src="images/model3.jpg" alt="Model 3"></div>
-      <div class="box"><img src="images/model4.jpg" alt="Model 4"></div>
+      <div class="box"><a href="#img1"><img src="images/model1.jpg" alt="Model 1"></a></div>
+      <div class="box"><a href="#img2"><img src="images/model2.jpg" alt="Model 2"></a></div>
+      <div class="box"><a href="#img3"><img src="images/model3.jpg" alt="Model 3"></a></div>
+      <div class="box"><a href="#img4"><img src="images/model4.jpg" alt="Model 4"></a></div>
+      <div class="box"><a href="#img5"><img src="images/model5.jpg" alt="Model 5"></a></div>
+      <div class="box"><a href="#img6"><img src="images/model6.jpg" alt="Model 6"></a></div>
     </div>
   </section>
 
@@ -107,12 +149,25 @@
   <section id="descriptions">
     <h2>Signature Features & Bag Details</h2>
     <div class="grid">
-      <div class="box"><img src="images/bag_description1.jpg" alt="Bag 1"></div>
-      <div class="box"><img src="images/bag_description2.jpg" alt="Bag 2"></div>
-      <div class="box"><img src="images/bag_description3.jpg" alt="Bag 3"></div>
-      <div class="box"><img src="images/bag_description4.jpg" alt="Bag 4"></div>
+      <div class="box"><a href="#desc1"><img src="images/bag_description1.jpg" alt="Bag 1"></a></div>
+      <div class="box"><a href="#desc2"><img src="images/bag_description2.jpg" alt="Bag 2"></a></div>
+      <div class="box"><a href="#desc3"><img src="images/bag_description3.jpg" alt="Bag 3"></a></div>
+      <div class="box"><a href="#desc4"><img src="images/bag_description4.jpg" alt="Bag 4"></a></div>
     </div>
   </section>
+
+  <!-- Lightbox Viewer (Image Modals) -->
+  <div id="img1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model1.jpg"></div>
+  <div id="img2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model2.jpg"></div>
+  <div id="img3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model3.jpg"></div>
+  <div id="img4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model4.jpg"></div>
+  <div id="img5" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model5.jpg"></div>
+  <div id="img6" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model6.jpg"></div>
+
+  <div id="desc1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description1.jpg"></div>
+  <div id="desc2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description2.jpg"></div>
+  <div id="desc3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description3.jpg"></div>
+  <div id="desc4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description4.jpg"></div>
 
 </body>
 </html>
