--- a/lookbook.html
+++ b/lookbook.html
@@ -3,139 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <title>The ittromaa Collection</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      background: #fff;
-      color: #333;
-    }
-
-    section {
-      padding: 40px 20px;
-    }
-
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-      font-size: 28px;
-    }
-
-    .grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-
-    .box {
-      width: 45%;
-      max-width: 500px;
-      height: 300px;
-      overflow: hidden;
-      background: #f9f9f9;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    #models .box {
-      width: 30%; /* 3 columns layout */
-    }
-
-    .box img, .box video {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: cover;
-      display: block;
-      cursor: pointer;
-    }
-
-    @media (max-width: 768px) {
-      .box {
-        width: 100%;
-      }
-    }
-
-    /* Lightbox styling */
-    .lightbox {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      padding-top: 60px;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      overflow: auto;
-      background-color: rgba(0,0,0,0.8);
-    }
-
-    .lightbox-content {
-      margin: auto;
-      display: block;
-      max-width: 90%;
-      max-height: 80%;
-    }
-
-    .lightbox:target {
-      display: block;
-    }
-
-    .close {
-      position: absolute;
-      top: 30px;
-      right: 30px;
-      color: white;
-      font-size: 30px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="lookbook.html" class="active">Lookbook</a></li>
+    </ul>
+  </nav>
 
   <!-- Section 1: Videos -->
   <section id="videos">
     <h2>Style in Motion</h2>
-    <div class="grid">
-      <div class="box">
-        <video controls>
-          <source src="videos/Black-unpacking.MOV" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="box">
-        <video controls>
-          <source src="videos/Whats in my bag.mov" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="box">
-        <video controls>
-          <source src="videos/video3.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
-      <div class="box">
-        <video controls>
-          <source src="videos/video4.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-      </div>
+    <div class="grid two-col">
+      <div class="box"><a href="#vid1"><video muted preload="metadata" poster="images/video1-thumb.jpg"><source src="videos/Black-unpacking.MOV" type="video/mp4"></video></a></div>
+      <div class="box"><a href="#vid2"><video muted preload="metadata" poster="images/video2-thumb.jpg"><source src="videos/Whats in my bag.mov" type="video/mp4"></video></a></div>
+      <div class="box"><a href="#vid3"><video muted preload="metadata" poster="images/video3-thumb.jpg"><source src="videos/video3.mp4" type="video/mp4"></video></a></div>
+      <div class="box"><a href="#vid4"><video muted preload="metadata" poster="images/video4-thumb.jpg"><source src="videos/video4.mp4" type="video/mp4"></video></a></div>
     </div>
   </section>
 
   <!-- Section 2: Models with Bags -->
   <section id="models">
     <h2>Spotted in Style: Models Carrying ittromaa</h2>
-    <div class="grid">
+    <div class="grid three-col">
       <div class="box"><a href="#img1"><img src="images/model1.jpg" alt="Model 1"></a></div>
       <div class="box"><a href="#img2"><img src="images/model2.jpg" alt="Model 2"></a></div>
       <div class="box"><a href="#img3"><img src="images/model3.jpg" alt="Model 3"></a></div>
@@ -145,10 +42,10 @@
     </div>
   </section>
 
-  <!-- Section 3: Bag Description Photos -->
+  <!-- Section 3: Bag Descriptions -->
   <section id="descriptions">
     <h2>Signature Features & Bag Details</h2>
-    <div class="grid">
+    <div class="grid two-col">
       <div class="box"><a href="#desc1"><img src="images/bag_description1.jpg" alt="Bag 1"></a></div>
       <div class="box"><a href="#desc2"><img src="images/bag_description2.jpg" alt="Bag 2"></a></div>
       <div class="box"><a href="#desc3"><img src="images/bag_description3.jpg" alt="Bag 3"></a></div>
@@ -156,7 +53,7 @@
     </div>
   </section>
 
-  <!-- Lightbox Viewer (Image Modals) -->
+  <!-- Lightboxes -->
   <div id="img1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model1.jpg"></div>
   <div id="img2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model2.jpg"></div>
   <div id="img3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model3.jpg"></div>
@@ -168,6 +65,15 @@
   <div id="desc2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description2.jpg"></div>
   <div id="desc3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description3.jpg"></div>
   <div id="desc4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description4.jpg"></div>
+
+  <div id="vid1" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/Black-unpacking.MOV" type="video/mp4"></video></div>
+  <div id="vid2" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/Whats in my bag.mov" type="video/mp4"></video></div>
+  <div id="vid3" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/video3.mp4" type="video/mp4"></video></div>
+  <div id="vid4" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/video4.mp4" type="video/mp4"></video></div>
+
+  <footer>
+    &copy; 2025 Ittromaa. All rights reserved.
+  </footer>
 
 </body>
 </html>
