--- a/lookbook.html
+++ b/lookbook.html
@@ -4,10 +4,93 @@
   <meta charset="UTF-8">
   <title>The ittromaa Collection</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    .lookbook .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 2rem 0;
+    }
+
+    .lookbook .grid.two-col .box {
+      width: 45%;
+      max-width: 500px;
+      height: 300px;
+    }
+
+    .lookbook .grid.three-col .box {
+      width: 30%;
+      max-width: 400px;
+      height: 300px;
+    }
+
+    .lookbook .box {
+      overflow: hidden;
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .lookbook .box img,
+    .lookbook .box video {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+      display: block;
+      cursor: pointer;
+    }
+
+    .lookbook .lightbox {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      padding-top: 60px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.9);
+    }
+
+    .lookbook .lightbox:target {
+      display: block;
+    }
+
+    .lookbook .lightbox-content {
+      margin: auto;
+      display: block;
+      max-width: 90%;
+      max-height: 80vh;
+    }
+
+    .lookbook .close {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+      color: white;
+      font-size: 30px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .lookbook h2 {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 28px;
+      color: #b8860b;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- Navigation Bar -->
+  <!-- Navigation -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -18,62 +101,74 @@
     </ul>
   </nav>
 
-  <!-- Section 1: Videos -->
-  <section id="videos">
-    <h2>Style in Motion</h2>
-    <div class="grid two-col">
-      <div class="box"><a href="#vid1"><video muted preload="metadata" poster="images/video1-thumb.jpg"><source src="videos/Black-unpacking.MOV" type="video/mp4"></video></a></div>
-      <div class="box"><a href="#vid2"><video muted preload="metadata" poster="images/video2-thumb.jpg"><source src="videos/Whats in my bag.mov" type="video/mp4"></video></a></div>
-      <div class="box"><a href="#vid3"><video muted preload="metadata" poster="images/video3-thumb.jpg"><source src="videos/video3.mp4" type="video/mp4"></video></a></div>
-      <div class="box"><a href="#vid4"><video muted preload="metadata" poster="images/video4-thumb.jpg"><source src="videos/video4.mp4" type="video/mp4"></video></a></div>
+  <div class="lookbook">
+
+    <!-- Videos -->
+    <section id="videos">
+      <h2>Style in Motion</h2>
+      <div class="grid two-col">
+        <div class="box"><a href="#vid1"><video muted preload="metadata"><source src="videos/Black-unpacking.MOV" type="video/mp4"></video></a></div>
+        <div class="box"><a href="#vid2"><video muted preload="metadata"><source src="videos/Whats in my bag.mov" type="video/mp4"></video></a></div>
+        <div class="box"><a href="#vid3"><video muted preload="metadata"><source src="videos/video3.mp4" type="video/mp4"></video></a></div>
+        <div class="box"><a href="#vid4"><video muted preload="metadata"><source src="videos/video4.mp4" type="video/mp4"></video></a></div>
+      </div>
+    </section>
+
+    <!-- Model Images -->
+    <section id="models">
+      <h2>Spotted in Style</h2>
+      <div class="grid three-col">
+        <div class="box"><a href="#img1"><img src="images/model1.jpg" alt="Model 1"></a></div>
+        <div class="box"><a href="#img2"><img src="images/model2.jpg" alt="Model 2"></a></div>
+        <div class="box"><a href="#img3"><img src="images/model3.jpg" alt="Model 3"></a></div>
+        <div class="box"><a href="#img4"><img src="images/model4.jpg" alt="Model 4"></a></div>
+        <div class="box"><a href="#img5"><img src="images/model5.jpg" alt="Model 5"></a></div>
+        <div class="box"><a href="#img6"><img src="images/model6.jpg" alt="Model 6"></a></div>
+      </div>
+    </section>
+
+    <!-- Bag Description Images -->
+    <section id="descriptions">
+      <h2>Bag Features & Details</h2>
+      <div class="grid two-col">
+        <div class="box"><a href="#desc1"><img src="images/bag_description1.jpg" alt="Bag 1"></a></div>
+        <div class="box"><a href="#desc2"><img src="images/bag_description2.jpg" alt="Bag 2"></a></div>
+        <div class="box"><a href="#desc3"><img src="images/bag_description3.jpg" alt="Bag 3"></a></div>
+        <div class="box"><a href="#desc4"><img src="images/bag_description4.jpg" alt="Bag 4"></a></div>
+      </div>
+    </section>
+
+    <!-- Lightboxes: Videos -->
+    <div id="vid1" class="lightbox"><a href="#" class="close">&times;</a>
+      <video class="lightbox-content" controls autoplay><source src="videos/Black-unpacking.MOV" type="video/mp4"></video>
     </div>
-  </section>
-
-  <!-- Section 2: Models with Bags -->
-  <section id="models">
-    <h2>Spotted in Style: Models Carrying ittromaa</h2>
-    <div class="grid three-col">
-      <div class="box"><a href="#img1"><img src="images/model1.jpg" alt="Model 1"></a></div>
-      <div class="box"><a href="#img2"><img src="images/model2.jpg" alt="Model 2"></a></div>
-      <div class="box"><a href="#img3"><img src="images/model3.jpg" alt="Model 3"></a></div>
-      <div class="box"><a href="#img4"><img src="images/model4.jpg" alt="Model 4"></a></div>
-      <div class="box"><a href="#img5"><img src="images/model5.jpg" alt="Model 5"></a></div>
-      <div class="box"><a href="#img6"><img src="images/model6.jpg" alt="Model 6"></a></div>
+    <div id="vid2" class="lightbox"><a href="#" class="close">&times;</a>
+      <video class="lightbox-content" controls autoplay><source src="videos/Whats in my bag.mov" type="video/mp4"></video>
     </div>
-  </section>
-
-  <!-- Section 3: Bag Descriptions -->
-  <section id="descriptions">
-    <h2>Signature Features & Bag Details</h2>
-    <div class="grid two-col">
-      <div class="box"><a href="#desc1"><img src="images/bag_description1.jpg" alt="Bag 1"></a></div>
-      <div class="box"><a href="#desc2"><img src="images/bag_description2.jpg" alt="Bag 2"></a></div>
-      <div class="box"><a href="#desc3"><img src="images/bag_description3.jpg" alt="Bag 3"></a></div>
-      <div class="box"><a href="#desc4"><img src="images/bag_description4.jpg" alt="Bag 4"></a></div>
+    <div id="vid3" class="lightbox"><a href="#" class="close">&times;</a>
+      <video class="lightbox-content" controls autoplay><source src="videos/video3.mp4" type="video/mp4"></video>
     </div>
-  </section>
+    <div id="vid4" class="lightbox"><a href="#" class="close">&times;</a>
+      <video class="lightbox-content" controls autoplay><source src="videos/video4.mp4" type="video/mp4"></video>
+    </div>
 
-  <!-- Lightboxes -->
-  <div id="img1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model1.jpg"></div>
-  <div id="img2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model2.jpg"></div>
-  <div id="img3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model3.jpg"></div>
-  <div id="img4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model4.jpg"></div>
-  <div id="img5" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model5.jpg"></div>
-  <div id="img6" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model6.jpg"></div>
+    <!-- Lightboxes: Images -->
+    <div id="img1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model1.jpg"></div>
+    <div id="img2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model2.jpg"></div>
+    <div id="img3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model3.jpg"></div>
+    <div id="img4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model4.jpg"></div>
+    <div id="img5" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model5.jpg"></div>
+    <div id="img6" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/model6.jpg"></div>
 
-  <div id="desc1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description1.jpg"></div>
-  <div id="desc2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description2.jpg"></div>
-  <div id="desc3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description3.jpg"></div>
-  <div id="desc4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description4.jpg"></div>
+    <div id="desc1" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description1.jpg"></div>
+    <div id="desc2" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description2.jpg"></div>
+    <div id="desc3" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description3.jpg"></div>
+    <div id="desc4" class="lightbox"><a href="#" class="close">&times;</a><img class="lightbox-content" src="images/bag_description4.jpg"></div>
 
-  <div id="vid1" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/Black-unpacking.MOV" type="video/mp4"></video></div>
-  <div id="vid2" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/Whats in my bag.mov" type="video/mp4"></video></div>
-  <div id="vid3" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/video3.mp4" type="video/mp4"></video></div>
-  <div id="vid4" class="lightbox"><a href="#" class="close">&times;</a><video class="lightbox-content" controls autoplay><source src="videos/video4.mp4" type="video/mp4"></video></div>
+  </div>
 
   <footer>
     &copy; 2025 Ittromaa. All rights reserved.
   </footer>
-
 </body>
 </html>
