--- a/shop.html
+++ b/shop.html
@@ -183,7 +183,7 @@
   </nav>
 
   <section class="content">
-    <h1>Buy Your Designer Vegan Handbag Today — Stylish, Timeless & Cruelty-Free</h1>
+    <h3>Buy Your Designer Vegan Handbag Today</h3>
     <div class="shop-container">
       <!-- USA -->
       <div class="shop-column">
